Zmiana tytułu i autora

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
 
   <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <meta name="description" content="Przycisk i Kwadrat">
+  <meta name="author" content="Michał Matulka">
 
   <link rel="stylesheet" href="css/style.css">
 
